--- a/lifehook-vuejs.html
+++ b/lifehook-vuejs.html
@@ -11,9 +11,10 @@
         
 
 <pre>
- Tùy vào công việc mà chúng ta cần đến vòng đời render của component thực thi lệnh nào đó. 
+ 
+1.  Vòng đời nạp các component trong vue.
 
- Xem Lifehook của Vuejs
+
 
 + beforeCreate() =>"Quan sát dữ liệu"  sau khi khai báo new Vue(). Object này sẽ lắng nghe các dữ liệu mà nó nên có "load data".
 
@@ -39,13 +40,9 @@ Dạng như app.vue đã nạp. Tiếp đó sub/component.vue được gọi và
 
 việc nắp ghép DOM đã không xảy ra. this.$el không thể sử dụng được trong giai đoạn này.
 
-Nên bắn api lấy dữ liệu.
 
-Không nên truy cập vuex giống như this.store.... vì nó chưa nạp lại dữ liệu mà chỉ hiển thị thể hiện new vue đồng nhất.
+ Nên bắn api lấy dữ liệu. 
 
-nếu có thấy dữ liệu của vuex và state cũng chỉ là nó load xong các component khác và nạp vào vue trong lúc nó nạp nó cũng đã biên dịch component hiện tại như một module
-
-cho nên state vuex mang giá trị ban đầu chỉ khởi tạo nhưng chưa thể sử dụng.
 
 
 + beforeMount() => Giai đoạn này chính là lúc nó biên dịch cái component và load component giống như một module. == modules.export = render function (){}
@@ -60,12 +57,16 @@ Nên việc sử dụng this.$el để truy cập đến các elment có trong c
 
 nếu this.$el là ở component hiện tại nếu nó có sẵn. Còn ko có sẵn bạn cần dùng this.$mount().el để gọi.
 
-Cả ở giai đoạn này việc load html và module đã hoàn tất nên việc truy cập vào this.$store để lấy data là ko nên.
+Cả ở giai đoạn này việc load html và module đã hoàn tất nên việc truy cập.
 
 
-hãy dùng this.$store.state... hoặc this.$store ở update lifehook. sau khi các component đã được thực hiện render xong cả funtion và data.
+Khi làm việc với vuex bạn muốn lấy data từ vuex hãy dùng computed: mapState hoặc mapGetters
 
-Thì hãy thực thi một công việc nào đó.
+Truy cập thẳng vào vuex thay vì gọi đến this.$store trong vòng đời bởi truy cập trong vòng đời biên dịch bạn sẽ không lấy được data..
+
+Thường các dữ liệu được bắn nên để lấy data qua một tiêu chí truy vấn nào đó và chỉ thực hiện một lần rồi lưu vào 1 state trong vuex.
+
+Nên chỉ cần gọi state share hoặc getter là lấy được.
 
 
 + beforeUpdate() => Hook này chạy trước khi data của component được tác động thay đổi và đang trong quá trình render trở lại.
@@ -75,7 +76,15 @@ Thì hãy thực thi một công việc nào đó.
 + beforeDestroy() => trước khi data hoặc dom bị được hủy bỏ
 
 
+
 Mọi vòng đời đều dàng buộc tới this giống như truy cập tới new Vue. Bạn không nên dùng arrow function vì this sẽ là ngữ cảnh function hiện tại.
+
+
+Không nên truy cập vuex giống như this.store.... vì nó chưa nạp lại dữ liệu mà chỉ hiển thị thể hiện new vue đồng nhất.
+
+nếu có thấy dữ liệu của vuex và state cũng chỉ là nó load xong các component khác và nạp vào vue trong lúc nó nạp nó cũng đã biên dịch component hiện tại như một module
+
+cho nên state vuex mang giá trị ban đầu chỉ khởi tạo nhưng chưa thể sử dụng.
 
 
 
